--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "builder-tests",
+  "name": "js-test-builder-methods",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,10 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/chai": "^5.0.0",
     "mongoose": "^8.6.3"
   },
   "devDependencies": {
+    "@types/chai": "^5.0.0",
     "@types/jest": "^29.5.13",
     "chai": "^4.5.0",
     "jest": "^29.7.0",
